--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,38 @@
+.play-button{
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #249c24;
+    padding: 10%;
+}
 
+.h4 {
+    font-size: 26px;
+    font-variant: all-small-caps;
+}
+
+.text_area{
+    padding: 10% 10% 10% 10%;
+    text-align: center;
+    
+}
+
+.textbox{
+    border: solid 1px darkgreen;
+    background: #00ff0017
+}
+
+.ion-text-center{
+    padding: 18% 10% 10% 10%;
+    text-align: center;
+    font-size: x-large;
+}
+
+.text{
+    padding: 7% 10% 7% 10%;
+    text-align: center;
+}
+
+.button{
+    background-color: darkgreen;
+    margin: 0px 10px 0px 84px;
+}
