--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,23 +7,24 @@
 </ion-header>
 
 <ion-content>
-  <div class="ion-text-center">
-    <h3>Names Jackpot</h3>
+  <div class="text">
+    <h4>Names Jackpot</h4>
   </div>
 
   <div class="text_area">
     <ion-item>
-      <ion-textarea placeholder="Write the names and separate by"[(ngModel)]="name"></ion-textarea>
+      <ion-textarea class="textbox" placeholder="Write the names and separate by"[(ngModel)]="name">
+      </ion-textarea>
     </ion-item>
   </div>
 
   <div class="play-button">
     <ion-item>
-      <ion-button (click)="addNames()">Play</ion-button>
+      <ion-button class="button" zise="large"color="GREEN" (click)="addNames()">Play</ion-button>
     </ion-item>
   </div>
 
   <div class="ion-text-center">
-    <ion-label>{{actName}}</ion-label>
+    <ion-label >{{actName}}</ion-label>
   </div>
 </ion-content>
